Updates for benchmark study

--- a/Benchmark_Study/embedding_similarity/Learned_embedding_similarity_calculator.ipynb
+++ b/Benchmark_Study/embedding_similarity/Learned_embedding_similarity_calculator.ipynb
@@ -39,18 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "colnames=['Gene', 'Vector'] \n",
-    "representationFile = '/media/DATA/serbulent/DATA/Thesis/ReviewPaper/results/Learned_Embeddings/learned_embed_calculated_human_protein_vectors.csv'\n",
+    "representationFile = '/media/DATA/serbulent/DATA/Thesis/ReviewPaper/results/representation_vectors/Learned_Embeddings/learned_embed_calculated_human_protein_vectors.csv'\n",
     "LearnedVec = pd.read_csv(representationFile,delimiter=',',encoding='utf-8', names=colnames, header=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "4  Homo sapiens (Human)     527  5 out of 5  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "'TX13A_HUMAN'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -237,7 +237,7 @@
        "20421"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "'P31946'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,13 +292,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5cd6a306b28492bb70abdb6492a22a8",
+       "model_id": "261b3567b30e45738e80253cfb4fa99a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
        "9  P04439  [-0.12398412279961105, 0.2040801817622601, 0.0..."
       ]
      },
-     "execution_count": 45,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,6 +441,15 @@
    "outputs": [],
    "source": [
     "LearnedVecDF.to_csv(\"/media/DATA/serbulent/DATA/Thesis/ReviewPaper/results/embedding_dataframes/LearnedVec_dataframe.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LearnedVecDF.to_pickle(\"/media/DATA/serbulent/DATA/Thesis/ReviewPaper/results/representation_vectors/representation_vector_dataframes/learned_vec.pkl\")"
    ]
   },
   {
