--- a/Benchmark_Study/embedding_similarity/tcga_embedding_similarity_calculator.ipynb
+++ b/Benchmark_Study/embedding_similarity/tcga_embedding_similarity_calculator.ipynb
@@ -38,24 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "colnames=['Gene', 'Vector'] \n",
-    "representationFile = \"/media/DATA/serbulent/DATA/Thesis/ReviewPaper/results/tcga_embedding/gemb_normal.csv\"\n",
+    "representationFile = \"/media/DATA/serbulent/DATA/Thesis/ReviewPaper/results/representation_vectors/tcga_embedding/gemb_normal.csv\"\n",
     "tcga_embedding = pd.read_csv(representationFile,delimiter=',',encoding='utf-8', names=None, header=None,skiprows=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1af413458cf44a068f2780890cabed24",
+       "model_id": "b5bdc067b9c4444eaa533324316f41d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,13 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b74758177eb404a9cf647cec1f565f0",
+       "model_id": "05cfb80adcdf473a98ef11f54c956c0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,88 +137,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Gene</th>\n",
-       "      <th>Entry</th>\n",
-       "      <th>Vector</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>TEX13A</td>\n",
-       "      <td>Q9BXU3</td>\n",
-       "      <td>[-0.16341070000000002, 0.13177536, 0.027271714...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>LARS2</td>\n",
-       "      <td>Q15031</td>\n",
-       "      <td>[0.012629689, 0.01917274, -0.022130901, 0.0146...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>TXNDC11</td>\n",
-       "      <td>Q6PKC3</td>\n",
-       "      <td>[0.04593855, -0.012116345, -0.11811426, 0.0997...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>TXK</td>\n",
-       "      <td>P42681</td>\n",
-       "      <td>[0.038961213, 0.069318585, 0.00691180160000000...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>TXLNA</td>\n",
-       "      <td>P40222</td>\n",
-       "      <td>[0.03339354, -0.017174669, -0.021231595, 0.054...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      Gene   Entry                                             Vector\n",
-       "0   TEX13A  Q9BXU3  [-0.16341070000000002, 0.13177536, 0.027271714...\n",
-       "1    LARS2  Q15031  [0.012629689, 0.01917274, -0.022130901, 0.0146...\n",
-       "2  TXNDC11  Q6PKC3  [0.04593855, -0.012116345, -0.11811426, 0.0997...\n",
-       "3      TXK  P42681  [0.038961213, 0.069318585, 0.00691180160000000...\n",
-       "4    TXLNA  P40222  [0.03339354, -0.017174669, -0.021231595, 0.054..."
+       "18946"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tcga_embedding[0:5]"
+    "len(tcga_embedding)"
    ]
   },
   {
