- new files for affinity prediction

--- a/Benchmark_Study/go_prediction/GO_Term_Prediction_Figures.ipynb
+++ b/Benchmark_Study/go_prediction/GO_Term_Prediction_Figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "array([ True, False, False, False, False, False, False, False, False])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -343,7 +343,7 @@
        "Hamming      0.177269       0.208409  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -492,7 +492,7 @@
        "Hamming      0.157211       0.190298  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -641,7 +641,7 @@
        "Hamming      0.058232       0.065443  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,13 +714,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "cat_based_avg_dict = get_category_based_average_results(tables)\n",
     "for table_aspect in list(tables.keys()):\n",
     "    cat_based_avg_dict[table_aspect].to_csv(\"category_based_average_\"+table_aspect+\".csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>APAAC</th>\n",
+       "      <th>k-sep-bigram</th>\n",
+       "      <th>ProtVec</th>\n",
+       "      <th>Gene2Vec</th>\n",
+       "      <th>SeqVec</th>\n",
+       "      <th>TCGA_Embedding</th>\n",
+       "      <th>LearnedEmbeddingVec</th>\n",
+       "      <th>Mut2Vec</th>\n",
+       "      <th>TAPE_BERT_Pool</th>\n",
+       "      <th>TAPE_BERT_Avg</th>\n",
+       "      <th>UniRep</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index_col</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MF_High_Shallow</th>\n",
+       "      <td>0.350459</td>\n",
+       "      <td>0.794351</td>\n",
+       "      <td>0.573763</td>\n",
+       "      <td>0.178947</td>\n",
+       "      <td>0.870500</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.576029</td>\n",
+       "      <td>0.486982</td>\n",
+       "      <td>0.814089</td>\n",
+       "      <td>0.809392</td>\n",
+       "      <td>0.778289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MF_High_Normal</th>\n",
+       "      <td>0.854776</td>\n",
+       "      <td>0.913024</td>\n",
+       "      <td>0.837329</td>\n",
+       "      <td>0.686168</td>\n",
+       "      <td>0.943890</td>\n",
+       "      <td>0.617501</td>\n",
+       "      <td>0.846714</td>\n",
+       "      <td>0.779840</td>\n",
+       "      <td>0.922188</td>\n",
+       "      <td>0.915916</td>\n",
+       "      <td>0.907192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MF_Middle_Shallow</th>\n",
+       "      <td>0.622799</td>\n",
+       "      <td>0.881617</td>\n",
+       "      <td>0.643920</td>\n",
+       "      <td>0.618066</td>\n",
+       "      <td>0.935955</td>\n",
+       "      <td>0.265837</td>\n",
+       "      <td>0.662887</td>\n",
+       "      <td>0.518082</td>\n",
+       "      <td>0.870296</td>\n",
+       "      <td>0.890445</td>\n",
+       "      <td>0.832969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MF_Middle_Normal</th>\n",
+       "      <td>0.631504</td>\n",
+       "      <td>0.910604</td>\n",
+       "      <td>0.644031</td>\n",
+       "      <td>0.602162</td>\n",
+       "      <td>0.915696</td>\n",
+       "      <td>0.106974</td>\n",
+       "      <td>0.647179</td>\n",
+       "      <td>0.639649</td>\n",
+       "      <td>0.827479</td>\n",
+       "      <td>0.891510</td>\n",
+       "      <td>0.866276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MF_Middle_Specific</th>\n",
+       "      <td>0.640130</td>\n",
+       "      <td>0.869965</td>\n",
+       "      <td>0.574320</td>\n",
+       "      <td>0.612709</td>\n",
+       "      <td>0.907375</td>\n",
+       "      <td>0.086982</td>\n",
+       "      <td>0.608286</td>\n",
+       "      <td>0.546784</td>\n",
+       "      <td>0.849607</td>\n",
+       "      <td>0.867226</td>\n",
+       "      <td>0.875870</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MF_Low_Shallow</th>\n",
+       "      <td>0.531909</td>\n",
+       "      <td>0.888642</td>\n",
+       "      <td>0.747187</td>\n",
+       "      <td>0.515066</td>\n",
+       "      <td>0.896111</td>\n",
+       "      <td>0.036667</td>\n",
+       "      <td>0.559537</td>\n",
+       "      <td>0.363611</td>\n",
+       "      <td>0.839171</td>\n",
+       "      <td>0.871667</td>\n",
+       "      <td>0.854444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MF_Low_Normal</th>\n",
+       "      <td>0.857937</td>\n",
+       "      <td>0.910317</td>\n",
+       "      <td>0.837013</td>\n",
+       "      <td>0.699762</td>\n",
+       "      <td>0.863810</td>\n",
+       "      <td>0.269841</td>\n",
+       "      <td>0.682251</td>\n",
+       "      <td>0.515238</td>\n",
+       "      <td>0.971429</td>\n",
+       "      <td>0.877143</td>\n",
+       "      <td>0.867619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MF_Low_Specific</th>\n",
+       "      <td>0.693624</td>\n",
+       "      <td>0.948810</td>\n",
+       "      <td>0.768175</td>\n",
+       "      <td>0.360159</td>\n",
+       "      <td>0.983333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.476310</td>\n",
+       "      <td>0.475886</td>\n",
+       "      <td>0.802280</td>\n",
+       "      <td>0.867756</td>\n",
+       "      <td>0.893947</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       APAAC  k-sep-bigram   ProtVec  Gene2Vec    SeqVec  \\\n",
+       "index_col                                                                  \n",
+       "MF_High_Shallow     0.350459  0.794351      0.573763  0.178947  0.870500   \n",
+       "MF_High_Normal      0.854776  0.913024      0.837329  0.686168  0.943890   \n",
+       "MF_Middle_Shallow   0.622799  0.881617      0.643920  0.618066  0.935955   \n",
+       "MF_Middle_Normal    0.631504  0.910604      0.644031  0.602162  0.915696   \n",
+       "MF_Middle_Specific  0.640130  0.869965      0.574320  0.612709  0.907375   \n",
+       "MF_Low_Shallow      0.531909  0.888642      0.747187  0.515066  0.896111   \n",
+       "MF_Low_Normal       0.857937  0.910317      0.837013  0.699762  0.863810   \n",
+       "MF_Low_Specific     0.693624  0.948810      0.768175  0.360159  0.983333   \n",
+       "\n",
+       "                    TCGA_Embedding  LearnedEmbeddingVec   Mut2Vec  \\\n",
+       "index_col                                                           \n",
+       "MF_High_Shallow     0.000000        0.576029             0.486982   \n",
+       "MF_High_Normal      0.617501        0.846714             0.779840   \n",
+       "MF_Middle_Shallow   0.265837        0.662887             0.518082   \n",
+       "MF_Middle_Normal    0.106974        0.647179             0.639649   \n",
+       "MF_Middle_Specific  0.086982        0.608286             0.546784   \n",
+       "MF_Low_Shallow      0.036667        0.559537             0.363611   \n",
+       "MF_Low_Normal       0.269841        0.682251             0.515238   \n",
+       "MF_Low_Specific     0.000000        0.476310             0.475886   \n",
+       "\n",
+       "                    TAPE_BERT_Pool  TAPE_BERT_Avg    UniRep  \n",
+       "index_col                                                    \n",
+       "MF_High_Shallow     0.814089        0.809392       0.778289  \n",
+       "MF_High_Normal      0.922188        0.915916       0.907192  \n",
+       "MF_Middle_Shallow   0.870296        0.890445       0.832969  \n",
+       "MF_Middle_Normal    0.827479        0.891510       0.866276  \n",
+       "MF_Middle_Specific  0.849607        0.867226       0.875870  \n",
+       "MF_Low_Shallow      0.839171        0.871667       0.854444  \n",
+       "MF_Low_Normal       0.971429        0.877143       0.867619  \n",
+       "MF_Low_Specific     0.802280        0.867756       0.893947  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "go_pred_tableF1_MF"
    ]
   },
   {
