--- a/Benchmark_Study/preprocess/Representation_Vector_Convert.ipynb
+++ b/Benchmark_Study/preprocess/Representation_Vector_Convert.ipynb
@@ -280,13 +280,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd9577ff58aa49c9890013f1886ba18e",
+       "model_id": "bd7f00c5bb7e48eab1462ac2b3e226f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -307,7 +307,7 @@
    ],
    "source": [
     "multi_col_representation_vector_file_path = \\\n",
-    "\"/media/DATA/serbulent/DATA/Thesis/ReviewPaper/results/representation_vectors/representation_vector_dataframes/bert_pool_dataframe_multi_col.csv\"\n",
+    "\"/media/DATA/serbulent/DATA/Thesis/ReviewPaper/results/representation_vectors/representation_vector_dataframes/ksep_dataframe_multi_col.csv\"\n",
     "multi_col_representation_vector = pd.read_csv(multi_col_representation_vector_file_path)\n",
     "vals = multi_col_representation_vector.iloc[:,1:(len(multi_col_representation_vector.columns))]\n",
     "original_values_as_df = pd.DataFrame(columns=['Entry', 'Vector'])\n",
@@ -318,86 +318,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Entry</th>\n",
-       "      <th>Vector</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>18400</th>\n",
-       "      <td>Q01081</td>\n",
-       "      <td>[-0.4933001697063446, -0.714009165763855, -0.4...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18401</th>\n",
-       "      <td>O14792</td>\n",
-       "      <td>[-0.3611646294593811, -0.700387716293335, -0.6...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18402</th>\n",
-       "      <td>Q5T9S5</td>\n",
-       "      <td>[-0.418243020772934, -0.6513220071792603, -0.4...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18403</th>\n",
-       "      <td>Q9HBF4</td>\n",
-       "      <td>[-0.2536462545394897, -0.7105455994606018, -0....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18404</th>\n",
-       "      <td>Q6ZV56</td>\n",
-       "      <td>[-0.4223378002643585, -0.6079273223876953, -0....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18405</th>\n",
-       "      <td>O96007</td>\n",
-       "      <td>[-0.41336458921432495, -0.7621205449104309, -0...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Entry                                             Vector\n",
-       "18400  Q01081  [-0.4933001697063446, -0.714009165763855, -0.4...\n",
-       "18401  O14792  [-0.3611646294593811, -0.700387716293335, -0.6...\n",
-       "18402  Q5T9S5  [-0.418243020772934, -0.6513220071792603, -0.4...\n",
-       "18403  Q9HBF4  [-0.2536462545394897, -0.7105455994606018, -0....\n",
-       "18404  Q6ZV56  [-0.4223378002643585, -0.6079273223876953, -0....\n",
-       "18405  O96007  [-0.41336458921432495, -0.7621205449104309, -0..."
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "original_values_as_df[18400:18406]"
+    "for el in original_values_as_df['Vector']:\n",
+    "    if len(el) != 400:\n",
+    "        print(el)"
    ]
   },
   {
