--- a/Benchmark_Study/preprocess/calculateHighestAnnotatedProteins.ipynb
+++ b/Benchmark_Study/preprocess/calculateHighestAnnotatedProteins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -28,14 +28,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fin_gaf = \"/media/DATA/serbulent/DATA/Thesis/ReviewPaper/preprocess/semantic_similarity_preprocess_inputs/goa_human.gaf\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HMS:0:00:07.488439 482,898 annotations READ: /media/DATA/serbulent/Code/Thesis/ReviewPaper/preprocess/goa_human.gaf \n",
+      "HMS:0:00:06.342339 482,898 annotations READ: /media/DATA/serbulent/DATA/Thesis/ReviewPaper/preprocess/semantic_similarity_preprocess_inputs/goa_human.gaf \n",
       "17224 IDs in loaded association branch, MF\n"
      ]
     }
@@ -46,16 +55,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['GO:0003823', 'GO:0034987']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "fin_gaf = \"/media/DATA/serbulent/Code/Thesis/ReviewPaper/preprocess/goa_human.gaf\""
+    "go_list = list()\n",
+    "go_list.extend(list(geneid2gos_human['A0A075B6Q5']))\n",
+    "go_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +93,238 @@
     "    for protein in sorted_proteins[0:500]:\n",
     "        highestAnnotatedProteins.append(protein[0])\n",
     "    return highestAnnotatedProteins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_go_id_number_for_protein_list(protein_list,annotationType):\n",
+    "    go_id_set = set()\n",
+    "    geneid2gos_human = read_gaf(fin_gaf,namespace=annotationType, ev_exclude={'IEA'})\n",
+    "    for protein in protein_list:\n",
+    "        go_id_set |= geneid2gos_human[protein]\n",
+    "    return len(go_id_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_go_id_number_repeated_for_protein_list(protein_list,annotationType):\n",
+    "    go_id_list = list()\n",
+    "    geneid2gos_human = read_gaf(fin_gaf,namespace=annotationType, ev_exclude={'IEA'})\n",
+    "    for protein in protein_list:\n",
+    "        go_id_list.extend(list(geneid2gos_human[protein]))\n",
+    "    return len(go_id_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HMS:0:00:06.672514 482,898 annotations READ: /media/DATA/serbulent/DATA/Thesis/ReviewPaper/preprocess/semantic_similarity_preprocess_inputs/goa_human.gaf \n",
+      "15493 IDs in loaded association branch, MF\n",
+      "Number of Protein Coding genes for MF is 15493\n"
+     ]
+    }
+   ],
+   "source": [
+    "highestAnnotatedProteinsMF = calculate_gene_numbers(\"MF\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HMS:0:00:07.268412 482,898 annotations READ: /media/DATA/serbulent/DATA/Thesis/ReviewPaper/preprocess/semantic_similarity_preprocess_inputs/goa_human.gaf \n",
+      "15493 IDs in loaded association branch, MF\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1270"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_go_id_number_for_protein_list(highestAnnotatedProteinsMF,\"MF\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HMS:0:00:07.347884 482,898 annotations READ: /media/DATA/serbulent/DATA/Thesis/ReviewPaper/preprocess/semantic_similarity_preprocess_inputs/goa_human.gaf \n",
+      "15493 IDs in loaded association branch, MF\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6435"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_go_id_number_repeated_for_protein_list(highestAnnotatedProteinsMF,\"MF\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HMS:0:00:06.040605 482,898 annotations READ: /media/DATA/serbulent/DATA/Thesis/ReviewPaper/preprocess/semantic_similarity_preprocess_inputs/goa_human.gaf \n",
+      "15198 IDs in loaded association branch, BP\n",
+      "Number of Protein Coding genes for BP is 15198\n",
+      "HMS:0:00:07.825106 482,898 annotations READ: /media/DATA/serbulent/DATA/Thesis/ReviewPaper/preprocess/semantic_similarity_preprocess_inputs/goa_human.gaf \n",
+      "15198 IDs in loaded association branch, BP\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5290"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "highestAnnotatedProteinsBP = calculate_gene_numbers(\"BP\")\n",
+    "calculate_go_id_number_for_protein_list(highestAnnotatedProteinsBP,\"BP\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HMS:0:00:06.548823 482,898 annotations READ: /media/DATA/serbulent/DATA/Thesis/ReviewPaper/preprocess/semantic_similarity_preprocess_inputs/goa_human.gaf \n",
+      "15198 IDs in loaded association branch, BP\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "19209"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_go_id_number_repeated_for_protein_list(highestAnnotatedProteinsBP,\"BP\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HMS:0:00:07.475397 482,898 annotations READ: /media/DATA/serbulent/DATA/Thesis/ReviewPaper/preprocess/semantic_similarity_preprocess_inputs/goa_human.gaf \n",
+      "16254 IDs in loaded association branch, CC\n",
+      "Number of Protein Coding genes for CC is 16254\n",
+      "HMS:0:00:06.777130 482,898 annotations READ: /media/DATA/serbulent/DATA/Thesis/ReviewPaper/preprocess/semantic_similarity_preprocess_inputs/goa_human.gaf \n",
+      "16254 IDs in loaded association branch, CC\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "846"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "highestAnnotatedProteinsCC = calculate_gene_numbers(\"CC\")\n",
+    "calculate_go_id_number_for_protein_list(highestAnnotatedProteinsCC,\"CC\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HMS:0:00:06.331829 482,898 annotations READ: /media/DATA/serbulent/DATA/Thesis/ReviewPaper/preprocess/semantic_similarity_preprocess_inputs/goa_human.gaf \n",
+      "16254 IDs in loaded association branch, CC\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7236"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_go_id_number_repeated_for_protein_list(highestAnnotatedProteinsCC,\"CC\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "highestAnnotatedProteinsBP = calculate_gene_numbers(\"BP\")"
    ]
   },
   {
