--- a/Benchmark_Study/go_prediction/preprocess_go_prediction.ipynb
+++ b/Benchmark_Study/go_prediction/preprocess_go_prediction.ipynb
@@ -2,36 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pixiedust database opened successfully\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <div style=\"margin:10px\">\n",
-       "            <a href=\"https://github.com/ibm-watson-data-lab/pixiedust\" target=\"_new\">\n",
-       "                <img src=\"https://github.com/ibm-watson-data-lab/pixiedust/raw/master/docs/_static/pd_icon32.png\" style=\"float:left;margin-right:10px\"/>\n",
-       "            </a>\n",
-       "            <span>Pixiedust version 1.1.18</span>\n",
-       "        </div>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -48,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +49,7 @@
        "12539927"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +153,7 @@
        "1755773   10116         RGD  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +244,7 @@
        "373544   10116         RGD  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +408,7 @@
        "8        SWIS  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,13 +446,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "propagated_go_terms = propagated_go_terms.query('GO_EVIDENCE != \"IEA\"')\n",
     "propagated_go_terms = propagated_go_terms[propagated_go_terms['DB_OBJECT_ID'].isin(human_proteins)]\n",
     "propagated_go_terms.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2450885"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(propagated_go_terms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "propagated_go_terms_human = propagated_go_terms[propagated_go_terms['TAX_ID'] == 9606]"
    ]
   },
   {
@@ -494,35 +496,6 @@
       ]
      },
      "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(propagated_go_terms)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "propagated_go_terms_human = propagated_go_terms[propagated_go_terms['TAX_ID'] == 9606]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2450885"
-      ]
-     },
-     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,6 +522,26 @@
    ],
    "source": [
     "len(set(propagated_go_terms_human['GO_ID']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17928"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(propagated_go_terms_human['DB_OBJECT_ID']))"
    ]
   },
   {
@@ -844,7 +837,8 @@
     }
    ],
    "source": [
-    "GOIDs_Human = GOIDs = list(set(propagated_go_terms_human['GO_ID']))\n",
+    "#GOIDs_Human = GOIDs = list(set(propagated_go_terms_human['GO_ID']))\n",
+    "GOIDs_Human = list(set(propagated_go_terms_human['GO_ID']))\n",
     "len(GOIDs_Human)"
    ]
   },
@@ -2793,17 +2787,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "dissimilar_terms_dataframe_save_path = save_path + 'dissimilar_terms_dataframe.pkl'\n",
-    "dissimilar_terms_dataframe.to_pickle(dissimilar_terms_dataframe_save_path)"
+    "#dissimilar_terms_dataframe.to_pickle(dissimilar_terms_dataframe_save_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
